--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
-  font-family: 'Titillium Web', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
 }
 strong {font-weight:800}
 .jumbotron {
-    /*background: linear-gradient(338deg, #f6faf5, #f6f8f7, #ebeff0);
+    background: linear-gradient(338deg, #f6faf5, #f6f8f7, #ebeff0);
     background-size: 600% 600%;
-    border-bottom: 10px solid #120301; */
+    border-bottom: 10px solid #120301;
     position: relative;
     -webkit-animation: animBg 9s ease infinite;
     -moz-animation: animBg 9s ease infinite;
@@ -16,8 +16,7 @@ strong {font-weight:800}
   opacity: 10;
   position: absolute;
   left:0; top:0; right:0; bottom:0;
-  background: url(img/bg.jpg);
-  background-size: cover;
+  background: url(images/empire.gif);
 }
 .jumbotron.light::before {
   opacity: 10;
@@ -39,8 +38,8 @@ strong {font-weight:800}
 }
 .jumbotron aside {
   border-radius: 8px;
-  background-color: #000a;
-  border: 4px solid #fff;
+  background-color: #023a46b8;
+  border: 4px solid #858585;
 }
 .pulse-shadow {
   animation: animPulseShadow 2s ease infinite;
@@ -79,7 +78,7 @@ section#invest {
   position: relative;
 }
 section#invest.early .container {
-  filter: blur(3px);
+  filter: blur(4px);
 }
 section#invest.early .is_early { display:block; }
 section#invest.early::after {
@@ -91,28 +90,5 @@ section#invest.early::after {
 
 @media (max-width: 480px){
   input { padding: 8px 12px!important; }
-}
-
-/* ADD-ON */
-
-div.gallery {
-  margin: 5px;
-  border: 1px solid #ccc;
-  float: left;
-  width: 120px;
-}
-
-div.gallery:hover {
-  border: 1px solid #777;
-}
-
-div.gallery img {
-  width: 100%;
-  height: auto;
-}
-
-div.desc {
-  padding: 5px;
-  text-align: center;
 }
 
